syntax = "proto3";
enum CostItemType
{
    Consume = 0;
    Between = 1;
}
enum ItemType
{
    Resource = 0;
    Speed = 2;
}
enum ObjectType
{
    Player = 0;
    Hero = 1;
}
